feat: add settingtype, role model, info routes
1. fix user model because add role model
2. fix object because add role model
