# backend/src/models/user.model.ts
@@ -5,7 +5,7 @@ interface IUser{
     name: string;
     email: string;
     password: string;
-    role: string;
+    role: Types.ObjectId;
     createAt: Date;
     updateAt: Date;
 }
@@ -16,7 +16,7 @@ const userSchema = new Schema<IUser>({
     name: {type: String, required: true},
     email: {type: String, required: true},
     password: {type: String, required: true},
-    role: {type: String, required: true, default: "guest"},
+    role: {type: Schema.Types.ObjectId, required: true, ref: "Role"},
     createAt: { type: Date, required: true, default: Date.now },
     updateAt: { type: Date, required: true, default: Date.now }
 })
